--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@db/*": ["./db/*"],
       "@types/*": ["./src/types/*"],
       "@icons/*": ["./src/app/components/icons/*"],
+      "@hooks/*": ["./src/hooks/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
