--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@lib/*": ["./src/lib/*"],
       "@db/*": ["./db/*"],
       "@types/*": ["./src/types/*"],
-      "@icons/*": ["./src/app/components/icons/*"],
+      "@icons/*": ["./src/components/icons/*"],
       "@hooks/*": ["./src/hooks/*"],
     }
   },
